--- a/app/globals.css
+++ b/app/globals.css
@@ -22,3 +22,15 @@ body {
   top: 35px;
   left: 35%;
 }
+
+@media screen and (width: 760px) {
+  .active::after {
+    content: "";
+    position: absolute;
+    width: 57px;
+    height: 3.3px;
+    background-color: #154444;
+    top: 35px;
+    left: 20%;
+  }
+}
